feat(igx-grid): add row selector column to the pinned part of the grid #812

--- a/src/core/styles/components/grid/_grid-theme.scss
+++ b/src/core/styles/components/grid/_grid-theme.scss
@@ -368,6 +368,9 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        z-index: 1;
+        position: relative;
+        background: inherit;
     }
 }
 
