--- a/src/tabs/tabs.component.html
+++ b/src/tabs/tabs.component.html
@@ -11,7 +11,7 @@
                     [ngClass]="{
                 'igx-tabs__header-menu-item': !group.isSelected && !group.isDisabled,
                 'igx-tabs__header-menu-item--selected': group.isSelected,
-                'igx-tabs__header-menu-item--disabled': group.isDisabled }" [relatedGroup]="group" role="tab" tabindex="0">
+                'igx-tabs__header-menu-item--disabled': group.isDisabled }" [relatedGroup]="group" role="tab">
                 </igx-tab-item>
                 <div #selectedIndicator class="igx-tabs__header-menu-item-indicator"></div>
             </div>
@@ -21,7 +21,7 @@
         </button>
     </div>
     <div class="igx-tabs__content-fixed">
-        <div class="igx-tabs__content-fluid">
+        <div #contentsContainer class="igx-tabs__content-fluid">
             <ng-content></ng-content>
         </div>
     </div>
