--- a/src/grid/grid-header.component.html
+++ b/src/grid/grid-header.component.html
@@ -2,7 +2,7 @@
     {{ column.header || column.field }}
 </ng-template>
 
-<span class="title" #header>
+<span class="title">
     <ng-container *ngTemplateOutlet="column.headerTemplate ? column.headerTemplate : defaultColumn; context: { $implicit: column }">
     </ng-container>
 </span>
@@ -18,6 +18,6 @@
         [restrictHDragMin]="restrictResizeMin"
         (dragEnd)="onResize($event)"
         [style.height.px]="resizerHeight"
-        style="width: 4.5px;z-index: 5;background-color: #006db6; position: absolute;cursor:col-resize">
+        style="width: 4.5px;z-index: 4;background-color: #006db6; position:absolute;cursor:col-resize">
     </div>
 </span>
