refactor(tabs): Scroll buttons appear/disappear on window resize #538

--- a/demos/app/tabs/sample.component.html
+++ b/demos/app/tabs/sample.component.html
@@ -200,6 +200,18 @@
                             vulputate in quis nisl.</p>
                     </div>
                 </igx-tabs-group>
+                <igx-tabs-group icon="note">
+                    <div class="my-tab-content">
+                        <h3>Notes</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius sapien ligula. Donec
+                            consectetur accumsan suscipit. Praesent rutrum tellus blandit bibendum cursus. Vestibulum urna
+                            arcu, bibendum nec molestie ac, varius congue massa. Mauris porttitor viverra lacus. Donec efficitur
+                            purus id urna dapibus, vitae pharetra orci pellentesque. Vestibulum id lacus a magna euismod
+                            volutpat id in mi. Etiam a nunc ut tellus dictum porta. Donec in ligula a arcu sollicitudin finibus.
+                            Vivamus id lorem pulvinar, accumsan justo vitae, vehicula diam. Mauris vel quam at velit venenatis
+                            vulputate in quis nisl.</p>
+                    </div>
+                </igx-tabs-group>
             </igx-tabs>
         </div>
         <div class="items-wrapper__item ">
