refactor(igx-grid): aria-label; methods; onRowSelecting; samples;

--- a/src/grid/grid.component.html
+++ b/src/grid/grid.component.html
@@ -23,7 +23,7 @@
     <div class="igx-grid__tr" role="row" style="width: calc(100% - 18px)">
         <ng-container *ngIf="rowSelectable">
             <div class="igx-grid__cbx-selection" #headerCheckboxContainer>
-                <igx-checkbox [checked]="allRowsSelected" (change)="onHeaderCheckboxClick($event)" disableRipple="true" #headerCheckbox></igx-checkbox>
+                <igx-checkbox [checked]="allRowsSelected" (change)="onHeaderCheckboxClick($event)" disableRipple="true" [aria-label]="headerCheckboxAriaLabel" #headerCheckbox></igx-checkbox>
             </div>
         </ng-container>
         <ng-container *ngIf="pinnedColumns.length > 0">
