--- a/src/tabs/tabs.component.html
+++ b/src/tabs/tabs.component.html
@@ -1,7 +1,7 @@
 <!-- TODO Remove tab container from here -->
 <div #tabsContainer>
     <div class="igx-tabs__header" #headerContainer>
-        <button igxRipple class="igx-tabs__header-button" igxButton="icon" (click)="scrollLeft($event)" #leftBtn style="display: none;">
+        <button igxRipple class="igx-tabs__header-button" igxButton="icon" (click)="scrollLeft($event)" #leftBtn style="visibility: hidden;">
             <igx-icon fontSet="material" name="navigate_before"></igx-icon>
         </button>
         <div class="igx-tabs__header-wrapper-fixed" #viewPort>
@@ -16,7 +16,7 @@
                 <div #selectedIndicator class="igx-tabs__header-menu-item-indicator"></div>
             </div>
         </div>
-        <button igxRipple class="igx-tabs__header-button" igxButton="icon" (click)="scrollRight($event)" #rightBtn style="display: none;">
+        <button igxRipple class="igx-tabs__header-button" igxButton="icon" (click)="scrollRight($event)" #rightBtn style="visibility: hidden;">
             <igx-icon fontSet="material" name="navigate_next"></igx-icon>
         </button>
     </div>
