--- a/src/grid/cell.component.html
+++ b/src/grid/cell.component.html
@@ -3,7 +3,7 @@
 </ng-template>
 <ng-template #inlineEditor let-cell="cell">
     <igx-input-group>
-        <input igxInput [value]="value" [igxAutoFocus]="true" [igxAutoSelect]="true" (keydown.enter)="cell.update($event.target.value)">
+        <input igxInput [value]="value" [igxFocus]="true" [igxSelection]="true" (keydown.enter)="cell.update($event.target.value)">
     </igx-input-group>
 </ng-template>
 <ng-container *ngTemplateOutlet="template; context: context">
