--- a/src/carousel/carousel.component.html
+++ b/src/carousel/carousel.component.html
@@ -12,7 +12,8 @@
     <div class="igx-carousel__inner" role="list">
         <ng-content></ng-content>
     </div>
-    <div ng-template="ngIf navigation">
+    <!-- S.S. April 9th, 2018 #929 Changed ng-template="ngIf navigation" into an *ngIf -->
+    <div *ngIf="navigation">
         <a role="button" tabindex="0" class="igx-carousel__arrow--prev" (click)="prev()" [hidden]="!slides.length">
             <igx-icon fontSet="material" name="arrow_back"></igx-icon>
         </a>
