style(tabs): adding igx-tabs__header-button--hidden styles

--- a/src/core/styles/components/tabs/_tabs-component.scss
+++ b/src/core/styles/components/tabs/_tabs-component.scss
@@ -35,6 +35,11 @@
         @extend %igx-tabs__header-button !optional;
     }
 
+    @include e(header-button, $m: hidden) {
+        @extend %igx-tabs__header-button !optional;
+        @extend %igx-tabs__header-button--hidden !optional;
+    }
+
     @include e(header-button, $m: active) {
         @extend %igx-tabs__header-button !optional;
     }
