feat(radio): add required property

--- a/src/radio/radio.component.html
+++ b/src/radio/radio.component.html
@@ -5,6 +5,7 @@
     [tabindex]="tabindex"
     [disabled]="disabled"
     [checked]="checked"
+    [required]="required"
     [attr.aria-checked]="checked"
     [attr.aria-labelledby]="ariaLabelledBy"
     [attr.aria-label]="ariaLabel"
