--- a/src/core/styles/components/checkbox/_checkbox-component.scss
+++ b/src/core/styles/components/checkbox/_checkbox-component.scss
@@ -12,7 +12,7 @@
     @extend %cbx-display !optional;
 
     @include e(input) {
-        @include hide-default();
+        @extend %cbx-input !optional;
     }
 
     @include e(label) {
@@ -35,6 +35,12 @@
 
     @include e(ripple) {
         @extend %cbx-ripple !optional;
+    }
+
+    @include m(focused) {
+        @include e(ripple) {
+            @extend %cbx-ripple--focused !optional;
+        }
     }
 
     @include m(indeterminate) {
