--- a/src/core/styles/components/radio/_radio-component.scss
+++ b/src/core/styles/components/radio/_radio-component.scss
@@ -34,6 +34,12 @@
         @extend %radio-ripple !optional;
     }
 
+    @include m(focused) {
+        @include e(ripple) {
+            @extend %radio-ripple--focused !optional;
+        }
+    }
+
     @include m(checked) {
         @include e(composite) {
             @extend %radio-composite--x !optional;
