--- a/src/core/styles/base/animations/generic/_scale.scss
+++ b/src/core/styles/base/animations/generic/_scale.scss
@@ -441,3 +441,20 @@
         }
     }
 }
+
+/// @requires {mixin} keyframes
+/// @prop {number} $start-scale [.5] - The scale to start the animation from.
+/// @prop {number} $end-scale [1] - The scale to end the animation at.
+@mixin scale-in-out($start-scale: .5, $end-scale: 1) {
+    @include keyframes(scale-in-out) {
+        50% {
+            transform: scale($start-scale);
+            transform-origin: 50% 50%;
+        }
+
+        100% {
+            transform: scale($end-scale);
+            transform-origin: 50% 50%;
+        }
+    }
+}
