docs: update sass docs for checkbox, switch and radio

--- a/src/core/styles/components/checkbox/_checkbox-theme.scss
+++ b/src/core/styles/components/checkbox/_checkbox-theme.scss
@@ -40,6 +40,9 @@
 /// @requires igx-color
 /// @requires extend
 /// @requires rem
+/// @requires em
+/// @requires animation
+/// @requires scale-in-out
 @mixin igx-checkbox($theme, $palette: $default-palette) {
     @include scale-in-out($start-scale: .9);
 
