--- a/src/core/styles/components/radio/_radio-theme.scss
+++ b/src/core/styles/components/radio/_radio-theme.scss
@@ -165,6 +165,10 @@
         [dir='rtl'] & {
             margin-left: initial;
             margin-right: $label-margin;
+
+            &:empty {
+                margin: 0;
+            }
         }
     }
 
@@ -175,6 +179,10 @@
         [dir='rtl'] & {
             margin-right: initial;
             margin-left: $label-margin;
+
+            &:empty {
+                margin: 0;
+            }
         }
     }
 
