--- a/src/core/styles/components/switch/_switch-theme.scss
+++ b/src/core/styles/components/switch/_switch-theme.scss
@@ -213,6 +213,10 @@
         [dir='rtl'] & {
             margin-left: initial;
             margin-right: $label-margin;
+
+            &:empty {
+                margin: 0;
+            }
         }
     }
 
@@ -223,6 +227,10 @@
         [dir='rtl'] & {
             margin-right: initial;
             margin-left: $label-margin;
+
+            &:empty {
+                margin: 0;
+            }
         }
     }
 
