fix(grid): display horizontal scrollbar container only when needed #925

--- a/src/grid/grid.component.html
+++ b/src/grid/grid.component.html
@@ -53,7 +53,7 @@
     </div>
 </div>
 
-<div class="igx-grid__scroll" [style.height]="'18px'" #scr>
+<div class="igx-grid__scroll" [style.height]="'18px'" #scr [hidden]="calcWidth - totalWidth >= 0">
     <div class="igx-grid__scroll-start" [style.width.px]='pinnedWidth' [hidden]="pinnedWidth === 0"></div>
     <div class="igx-grid__scroll-main" [style.width.px]='unpinnedWidth'>
         <ng-template igxFor [igxForOf]='[]' #scrollContainer>
