feat(igxFor): deprecating igxForRemote #880

--- a/demos/app/grid-remote-virtualization/sample.component.html
+++ b/demos/app/grid-remote-virtualization/sample.component.html
@@ -1,5 +1,5 @@
 <div class="sample-wrapper dark-grid">
-    <igx-grid #grid1 [data]="remoteData | async" (onDataPreLoad)="dataLoading($event)" [height]="'600px'" [remoteVirtualization]='true'>
+    <igx-grid #grid1 [data]="remoteData | async" (onDataPreLoad)="dataLoading($event)" [height]="'600px'">
         <igx-column *ngFor="let c of columns" [sortable]="true" [filterable]="true" [field]="c.field" [header]="c.field">
         </igx-column>
     </igx-grid>
